[package]
name = "mc-oblivious-aes-gcm"
version = "0.9.5-pre1"
description = """
WARNING: This crate is not intended for general use, you should use the official RustCrypto crate instead.

Fork of RustCrypto's AES-GCM to provide a public CTR member, for use in a constant-time decrypt-in-place method.
"""
authors = [
    "MobileCoin",
    "RustCrypto Developers"
]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/mc-oblivious-aes-gcm"
repository = "https://github.com/mobilecoinfoundation/oblivious-aes-gcm"

[dependencies]
aead = { version = "0.4", default-features = false }
aes = { version = "0.7.5", optional = true }
cipher = "0.3"
ctr = "0.8"
ghash = { version = "0.4.2", default-features = false }
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1.4", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.4", features = ["dev"], default-features = false }
hex-literal = "0.3"

[features]
default    = ["aes", "alloc"]
std        = ["aead/std", "alloc"]
alloc      = ["aead/alloc"]
armv8      = ["aes/armv8", "ghash/armv8"] # nightly-only
force-soft = ["aes/force-soft", "ghash/force-soft"]
heapless   = ["aead/heapless"]
stream     = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
