[package]
name = "mc-oblivious-aes-gcm"
version = "0.10.1"
description = """
WARNING: This crate is not intended for general use, you should use the official RustCrypto crate instead.

Fork of RustCrypto's AES-GCM to provide a public CTR member, for use in a constant-time decrypt-in-place method.
"""
authors = [
    "MobileCoin",
    "RustCrypto Developers"
]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/mc-oblivious-aes-gcm"
repository = "https://github.com/mobilecoinfoundation/oblivious-aes-gcm"

[dependencies]
aead = { version = "0.5", default-features = false }
aes = { version = "0.8", optional = true }
cipher = "0.4"
ctr = "0.9"
ghash = { version = "0.5", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.5", features = ["dev"], default-features = false }
hex-literal = "0.3"

[features]
default   = ["aes", "alloc", "getrandom"]
std       = ["aead/std", "alloc"]
alloc     = ["aead/alloc"]
getrandom = ["aead/getrandom"]
heapless  = ["aead/heapless"]
stream    = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
